   PropCodepage.cpp PropCodepage.h PropColors.cpp PropColors.h
   PropCompare.cpp PropCompare.h PropEditor.h PropGeneral.h
   PropRegistry.h PropSyntaxColors.cpp PropSyntaxColors.h
   PropVss.h SyntaxColors.cpp SyntaxColors.h resource.h
  Src\Common: PreferencesDlg.cpp PreferencesDlg.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1439335 ] Reset cwd in Merge.cpp SelectFile
  Src: Merge.cpp OpenDlg.cpp

2006-03-03 Perry
 PATCH: [ 1442699 ] New Changes.txt file for MakeResDll
 Add Changes.txt change log (this file).
  MakeResDll: new Changes.txt
 PATCH: [ 1424636 ] New BuildOneLanguage.vbs & fix MakeResDll exit
  MakeResDll: MakeResDll.cpp StdAfx.h
  Src\Languages: BuildDll.bat BuildOneLanguage.vbs

2006-03-03 Kimmo
 PATCH: [ 1441387 ] Improve File Encoding dialog
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
 PATCH: [ 1442107 ] Move About-dialog code to separate files from Merge.cpp
  Src: Merge.cpp Merge.dsp
  Src new files: AboutDlg.cpp AboutDlg.h

2006-03-02 Tim
 PATCH: [ 1437770 ] Icons for 'Generate Patch' and 'Generate Report'
  Src: MainFrm.cpp Merge.rc resource.h
  Src/res new files: patch.bmp report.bmp

2006-03-02 Kimmo
 PATCH: [ 1441124 ] Improve filter test dialog
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-03-01 Kimmo
 PATCH: [ 1424535 ] Czech Translation, Submitted by Jan Hryz
  Improve unpacker selection dialog and new filter location selection dialog
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-03-01 Tim
 PATCH: [ 1438233 ] New icons for 'notequalfile', 'lfile' and 'rfile'
  Src/res: lfile.ico notequalfile.ico rfile.ico

2006-03-01 Kimmo
 PATCH: [ 1436855 ] Typo in lang files (change pactch to patch)
  Src/Languages/*: Merge*.rc
 BUG: [ 1440774 ] Test button for file filters enabled for no filter
  Fix submitted by Gal Hammer
  Src: FileFiltersDlg.cpp
 PATCH: [ 1395847 ] Integration with Rational ClearCase
  Submitted by Gal Hammer
  Src: MainFrm.cpp MainFrm.h Merge.h MergeArgs.cpp MergeDoc.cpp MergeDoc.h
  Src/Common: coretools.cpp coretools.h